Chosen words are yellow to indicate too few, red to indicate invalid checksum (not yet computed though)

--- a/styles.css
+++ b/styles.css
@@ -57,3 +57,12 @@ input[type="text"].prefix {
     font-size: x-large;
     font-weight: bold;
 }
+.insufficient {
+    background: lightyellow;
+}
+.invalid {
+    background: lightpink;
+}
+.valid {
+    background: lightgreen;
+}
